Colab を使用して作成されました

--- a/python_excel_kadai1.ipynb
+++ b/python_excel_kadai1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyORWaR0ZFUiNHb8R7WifOeM",
+      "authorship_tag": "ABX9TyMKff5wKqz3oguaDNdQJvKe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 56,
       "metadata": {
         "id": "VIdIb3c_1Wic"
       },
@@ -74,7 +74,11 @@
         "last_row = ws.max_row\n",
         "\n",
         "# 金額を合計する\n",
-        "ws.cell(row=last_row + 1, column=5).value = '=SUM(E11:E{})'.format(last_row)      # 'E12'\n",
+        "sum_value = 0\n",
+        "for row in range(start_row + 1, start_row + len(data)):\n",
+        "    sum_value += ws.cell(row=row, column=start_col + 3).value\n",
+        "ws.cell(row=start_row + len(data), column=start_col + 3).value = sum_value\n",
+        "\n",
         "\n",
         "#1行空ける# 現時点での最終行を取得\n",
         "last_row = ws.max_row\n",
@@ -82,15 +86,17 @@
         "\n",
         "# 小計\n",
         "ws.cell(row=start_row, column=2).value = '小計'\n",
-        "ws.cell(row=start_row, column=5).value = '=E{}'.format(last_row)        # 'E13'\n",
+        "ws.cell(row=start_row, column=5).value = sum_value\n",
         "\n",
         "# 消費税\n",
+        "tax_value = sum_value * 0.1\n",
         "ws.cell(row=start_row + 1, column=2).value = '消費税'\n",
-        "ws.cell(row=start_row + 1, column=5).value = '=E{} * 0.1'.format(last_row)\n",
+        "ws.cell(row=start_row + 1, column=5).value = tax_value\n",
         "\n",
         "# 合計\n",
+        "total_value =sum_value + tax_value\n",
         "ws.cell(row=start_row + 2, column=2).value = '合計'\n",
-        "ws.cell(row=start_row + 2, column=5).value = '=SUM(E{}:E{})'.format(start_row, start_row + 1)     # E14:E15\n",
+        "ws.cell(row=start_row + 2, column=5).value = total_value\n",
         "\n",
         "# 請求書のファイル名を指定\n",
         "filename = f\"請求書_{today.strftime('%Y%m%d')}.xlsx\"\n",
