Colab を使用して作成されました

--- a/kadai2.ipynb
+++ b/kadai2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPisJw3OX+JKL88IjKmhD1t",
+      "authorship_tag": "ABX9TyO7FPeyI5ogfECqjVPIiXxw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "1a5C8chxhnmi"
       },
@@ -46,8 +46,8 @@
         "\n",
         "# 2. 「平均売上」列を作成し、全体の売上の平均を算出\n",
         "mean = df['売上'].mean()\n",
-        "\n",
         "# 「業績ランク」列を作成し、以下の条件分岐をして業績ランクを設定します。\n",
+        "df['平均売上'] = mean\n",
         "# 関数「performance」を定義して業績ランクの設定をしてください。\n",
         "def performance(rank):\n",
         "    result = '';\n",
